<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewOpponentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/title_opponent_board"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewOpponentWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewOpponentTitle"
        android:layout_marginTop="12dp"
        android:text="@string/water_layout"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewOpponentWater"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/textViewOpponentWater"
        android:text="@string/title_your_board"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewUserWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewUserTitle"
        android:layout_marginTop="14dp"
        android:text="@string/water_layout"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextXCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewOpponentTitle"
        android:layout_below="@+id/textViewUserWater"
        android:layout_marginTop="28dp"
        android:ems="1"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewXLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextXCoordinate"
        android:layout_alignBottom="@+id/editTextXCoordinate"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/editTextXCoordinate"
        android:text="@string/x_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editTextYCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextXCoordinate"
        android:layout_toLeftOf="@+id/textViewXLabel"
        android:ems="1"
        android:inputType="number" />

    <TextView
        android:id="@+id/textViewYLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextYCoordinate"
        android:layout_alignLeft="@+id/textViewXLabel"
        android:text="@string/y_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnFire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewYLabel"
        android:layout_below="@+id/textViewYLabel"
        android:layout_marginTop="10dp"
        android:text="@string/button_fire_text" />

</RelativeLayout>
