<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/welcome"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/text_button_login"
        android:onClick="loginButtonClickHandler" />
    
   <Button
        android:id="@+id/buttonCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/text_button_create_user"
        android:onClick="createUserButtonClickHandler" />
       
    <Button
        android:id="@+id/buttonConceptPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCreateUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/text_button_concept"
        android:onClick="conceptButtonClickHandler" />

</RelativeLayout>
